Update visx packages

--- a/package.json
+++ b/package.json
@@ -327,6 +327,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.4.7",
+    "@floating-ui/dom": "^0.1.8",
+    "@floating-ui/react-dom": "^0.3.4",
     "@reach/accordion": "^0.10.2",
     "@reach/combobox": "^0.15.2",
     "@reach/dialog": "^0.11.2",
@@ -340,14 +342,14 @@
     "@sqs/jsonc-parser": "^1.0.3",
     "@types/svgo": "2.6.0",
     "@visx/annotation": "^1.7.2",
-    "@visx/axis": "^1.7.0",
+    "@visx/axis": "^2.4.0",
     "@visx/glyph": "^1.7.0",
     "@visx/grid": "^1.7.0",
-    "@visx/group": "^1.7.0",
+    "@visx/group": "^2.1.0",
     "@visx/mock-data": "^1.7.0",
-    "@visx/pattern": "^1.7.0",
-    "@visx/scale": "^1.7.0",
-    "@visx/xychart": "^1.7.3",
+    "@visx/pattern": "^2.1.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/xychart": "^2.5.0",
     "ajv": "^8.6.3",
     "ajv-formats": "^2.1.1",
     "apollo3-cache-persist": "^0.12.1",
