Create a commit for each release on sourcegraph/sg
Because at some point, when they are too many releases, GitHub stops
making `latest` point at them, the current release process is broken.

This commit introduces an additional step that commits automatically on
each release in sourcegraph/sg README to make sure we always have a
proper sha1 associated to that release and can always have `latest`
properly updated.

--- a/.github/workflows/sg-binary-release.yml
+++ b/.github/workflows/sg-binary-release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - devx/fix-sg-releases
     paths:
       - 'dev/sg/**'
       - '.github/workflows/sg-binary-release.yml'
@@ -13,6 +14,21 @@ env:
   CGO_ENABLED: '1'
 
 jobs:
+  commit_sg:
+    name: Touch sourcegraph/sg
+    steps:
+      - name: checkout-sourcegraph-sg
+        uses: actions/checkout@v2
+        with: 
+        repository: sourcegraph/sg
+      - name: touch-sourcegraph-sg
+        run: |
+          today=$(date +'%Y-%m-%d-%H-%M')
+          sed -i 's/Latest release: .*/Latest release: '"$today"'/' README.md 
+          git add README.md
+          git commit -m "Update to latest release"
+          git push
+
   create_release:
     name: create-github-release
     runs-on: ubuntu-latest
