--- a/.github/workflows/sg-binary-release.yml
+++ b/.github/workflows/sg-binary-release.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           today=$(date +'%Y-%m-%d-%H-%M')
           sed -i 's/Latest release: .*/Latest release: '"$today"'/' README.md 
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add README.md
           git commit -m "Update to latest release"
           git push
