--- a/.github/workflows/sg-binary-release.yml
+++ b/.github/workflows/sg-binary-release.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v2
         with: 
           repository: sourcegraph/sg
+          token: ${{ secrets.SG_RELEASE_TOKEN }}
       - name: touch-sourcegraph-sg
         run: |
           today=$(date +'%Y-%m-%d-%H-%M')
