Revert visx annotation

--- a/package.json
+++ b/package.json
@@ -341,6 +341,7 @@
     "@sourcegraph/extension-api-classes": "^1.1.0",
     "@sqs/jsonc-parser": "^1.0.3",
     "@types/svgo": "2.6.0",
+    "@visx/annotation": "^1.7.2",
     "@visx/axis": "^1.7.0",
     "@visx/glyph": "^1.7.0",
     "@visx/grid": "^1.7.0",
