--- a/docker-images/syntax-highlighter/Cargo.toml
+++ b/docker-images/syntax-highlighter/Cargo.toml
@@ -43,5 +43,7 @@ lazy_static = "1.0"
 tree-sitter = "0.20.2"
 tree-sitter-highlight = "0.20.1"
 tree-sitter-go = "0.19.1"
+tree-sitter-html = "0.19.0"
+tree-sitter-javascript = "0.20.0"
 
 [features]
