Upgraded reactstrap to latest version Added popper.js Resolving breaking changes.

--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
     "@types/react-router": "5.1.10",
     "@types/react-router-dom": "5.1.7",
     "@types/react-stripe-elements": "6.0.4",
-    "@types/reactstrap": "8.4.2",
+    "@types/reactstrap": "^8.7.2",
     "@types/recharts": "1.8.18",
     "@types/resize-observer-browser": "0.1.4",
     "@types/sanitize-html": "2.3.0",
@@ -400,7 +400,7 @@
     "react-stripe-elements": "^6.1.2",
     "react-textarea-autosize": "^8.3.0",
     "react-visibility-sensor": "^5.1.1",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^9.0.1",
     "recharts": "^1.8.5",
     "regexpp": "^3.1.0",
     "rxjs": "^6.6.3",
