Update package.json (add floating ui package)

--- a/package.json
+++ b/package.json
@@ -324,6 +324,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.4.7",
+    "@floating-ui/dom": "^0.1.10",
     "@reach/accordion": "^0.10.2",
     "@reach/combobox": "^0.15.2",
     "@reach/dialog": "^0.11.2",
