--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -3,8 +3,13 @@ version: v1
 lint:
   use:
     - DEFAULT
+    - COMMENTS
   except:
+    - ENUM_VALUE_PREFIX
+    - ENUM_VALUE_UPPER_SNAKE_CASE
+    - ENUM_ZERO_VALUE_SUFFIX
     - PACKAGE_VERSION_SUFFIX
+
 breaking:
   use:
     - FILE
