--- a/client/search-ui/package.json
+++ b/client/search-ui/package.json
@@ -7,6 +7,7 @@
   "sideEffects": false,
   "license": "Apache-2.0",
   "scripts": {
+    "storybook": "STORIES_GLOB=client/search-ui/src/**/*.story.tsx yarn workspace @sourcegraph/storybook run start",
     "eslint": "eslint --cache 'src/**/*.[jt]s?(x)'",
     "test": "jest"
   }
