Remove web components and update repo page

--- a/client/vscode/package.json
+++ b/client/vscode/package.json
@@ -80,7 +80,7 @@
           "id": "sourcegraph.searchSidebar",
           "name": "Sourcegraph Search",
           "visibility": "visible",
-          "when": "!sourcegraph.canFocusActiveDocument"
+          "when": "!sourcegraph.showFileTree || !sourcegraph.canFocusActiveDocument"
         },
         {
           "id": "sourcegraph.files",
