--- a/package.json
+++ b/package.json
@@ -304,6 +304,7 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "storybook-addon-designs": "^6.2.0",
     "storybook-dark-mode": "^1.0.8",
+    "stream-browserify": "^3.0.0",
     "string-width": "^4.2.0",
     "style-loader": "^3.1.0",
     "stylelint": "^13.8.0",
@@ -311,6 +312,7 @@
     "term-size": "^2.2.0",
     "terser-webpack-plugin": "^5.1.4",
     "thread-loader": "^3.0.4",
+    "ts-loader": "^9.2.6",
     "ts-morph": "^8.1.0",
     "ts-node": "^9.1.1",
     "typed-scss-modules": "^4.1.1",
@@ -342,6 +344,7 @@
     "@sourcegraph/extension-api-classes": "^1.1.0",
     "@sqs/jsonc-parser": "^1.0.3",
     "@types/svgo": "2.6.0",
+    "@types/vscode": "^1.63.1",
     "@visx/annotation": "^1.7.2",
     "@visx/axis": "^1.7.0",
     "@visx/glyph": "^1.7.0",
