--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -12,3 +12,5 @@ plugins:
     path: ./.bin/protoc-gen-doc
     out: ./doc/code_intelligence/references
     opt: doc/code_intelligence/references/lsif.sprig,lsif.md
+  - name: rust
+    out: ./docker-images/syntax-highlighter/src
