--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,4 +74,7 @@
   "shellformat.flag": "-i 2 -ci",
   "vscode-graphql.useSchemaFileDefinitions": true,
   "jest.jestCommandLine": "yarn -s test",
+  "files.watcherExclude": {
+    "**/target": true
+  },
 }
