--- a/client/vscode/package.json
+++ b/client/vscode/package.json
@@ -19,22 +19,49 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCommand:sourcegraph.search",
+    "onView:sourcegraph.searchSidebar",
+    "onWebviewPanel:sourcegraphSearch"
   ],
   "main": "./dist/node/extension.js",
   "browser": "./dist/webworker/extension.js",
   "contributes": {
     "commands": [
+      {
+        "command": "sourcegraph.search",
+        "category": "Sourcegraph",
+        "title": "Open Sourcegraph Search Tab"
+      }
     ],
     "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "sourcegraph-view",
+          "title": "Sourcegraph",
+          "icon": "images/logo.png"
+        }
+      ]
     },
     "views": {
+      "sourcegraph-view": [
+        {
+          "type": "webview",
+          "id": "sourcegraph.searchSidebar",
+          "name": "Sourcegraph Search",
+          "visibility": "visible"
+        }
+      ]
     },
     "viewsWelcome": [
     ],
     "configuration": {
     },
     "keybindings": [
+      {
+        "command": "sourcegraph.search",
+        "key": "ctrl+shift+8",
+        "mac": "cmd+shift+8"
+      }
     ],
     "menus": {
       "editor/context": [
@@ -45,10 +72,10 @@
     "eslint": "eslint --cache '**/*.[jt]s?(x)'",
     "test": "echo \"No tests exist yet\" && exit 1",
     "package": "echo \"package script not implemented yet\" && exit 1",
-    "build": "webpack --mode=development --config-name extension:node --config-name extension:webworker",
-    "build:node": "webpack --mode=development --config-name extension:node",
-    "build:web": "webpack --mode=development --config-name extension:webworker",
-    "watch:node": "webpack --mode=development --watch --config-name extension:node",
-    "watch:web": "webpack --mode=development --watch --config-name extension:node"
+    "build": "webpack --mode=development --config-name extension:node --config-name extension:webworker --config-name webviews",
+    "build:node": "webpack --mode=development --config-name extension:node --config-name webviews",
+    "build:web": "webpack --mode=development --config-name extension:webworker --config-name webviews",
+    "watch:node": "webpack --mode=development --watch --config-name extension:node --config-name webviews",
+    "watch:web": "webpack --mode=development --watch --config-name extension:node --config-name webviews"
   }
 }
