--- a/.yarnrc
+++ b/.yarnrc
@@ -1,4 +1,4 @@
-registry "https://registry.npmjs.org/"
-
+# registry "https://registry.npmjs.org/"
+yarn-offline-mirror "/buildkite/npm-packages-offline-cache"
 # Do not warn when adding packages until we need to split packages into different workspaces
 --ignore-workspace-root-check true
