--- a/docker-images/alpine-3.14/Dockerfile
+++ b/docker-images/alpine-3.14/Dockerfile
@@ -24,8 +24,7 @@ RUN addgroup -g 101 -S sourcegraph && adduser -u 100 -S -G sourcegraph -h /home/
 # Install other packages that are desirable in ALL Sourcegraph Docker images.
 RUN apk update && apk add --no-cache \
     bind-tools \
-    # Requires the use of the edge repo for CVE-2021-28831 until a patched version is brought into the 3.12 mirror.
-    'busybox>=1.34.1' --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main \
+    'busybox>=1.34.1' \
     ca-certificates \
     curl \
     mailcap \
