--- a/client/search-ui/tsconfig.json
+++ b/client/search-ui/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "react",
   },
   "include": ["./src/**/*", "./*.ts"],
+  "exclude": ["../../node_modules", "./node_modules", "./out"],
   "references": [
     { "path": "../search" },
     { "path": "../shared" },
