--- a/client/vscode/package.json
+++ b/client/vscode/package.json
@@ -22,11 +22,10 @@
     "onCommand:sourcegraph.openInBrowser",
     "onCommand:sourcegraph.search",
     "onCommand:sourcegraph.copyFileLink",
-    "onCommand:sourcegraph.searchOnSourcegraph",
-    "onCommand:sourcegraph.searchInSourcegraph",
+    "onCommand:sourcegraph.selectionSearch",
+    "onCommand:sourcegraph.selectionSearchWeb",
     "onCommand:extension.openFile",
     "onView:sourcegraph.extensionHost",
-    "onView:sourcegraph.historySidebar",
     "onView:sourcegraph.searchSidebar",
     "onView:sourcegraph.files",
     "onWebviewPanel:sourcegraphSearch"
@@ -59,12 +58,12 @@
         "title": "Copy Sourcegraph File Link"
       },
       {
-        "command": "sourcegraph.searchInSourcegraph",
+        "command": "sourcegraph.selectionSearch",
         "category": "Sourcegraph",
         "title": "Search Selection in Sourcegraph Tab"
       },
       {
-        "command": "sourcegraph.searchOnSourcegraph",
+        "command": "sourcegraph.selectionSearchWeb",
         "category": "Sourcegraph",
         "title": "Search Selection in Sourcegraph Web"
       }
@@ -85,14 +84,7 @@
           "id": "sourcegraph.searchSidebar",
           "name": "Search",
           "visibility": "visible",
-          "when": "!sourcegraph.searchHistoryFound && !sourcegraph.showFileTree && !sourcegraph.canFocusActiveDocument"
-        },
-        {
-          "type": "webview",
-          "id": "sourcegraph.historySidebar",
-          "name": "Search",
-          "visibility": "visible",
-          "when": "sourcegraph.searchHistoryFound && !sourcegraph.activeSearchPanel && !sourcegraph.showFileTree && !sourcegraph.canFocusActiveDocument"
+          "when": "!sourcegraph.showFileTree && !sourcegraph.canFocusActiveDocument"
         },
         {
           "id": "sourcegraph.files",
@@ -105,7 +97,7 @@
           "id": "sourcegraph.extensionHost",
           "name": "Sourcegraph Extensions",
           "visibility": "visible",
-          "when": "sourcegraph.activeSearchPanel"
+          "when": "sourcegraph.activeSearchPanel || sourcegraph.showFileTree || sourcegraph.canFocusActiveDocument"
         }
       ]
     },
@@ -163,6 +155,21 @@
         "command": "sourcegraph.search",
         "key": "ctrl+shift+8",
         "mac": "cmd+shift+8"
+      },
+      {
+        "command": "sourcegraph.openInBrowser",
+        "key": "alt+a",
+        "mac": "option+a"
+      },
+      {
+        "command": "sourcegraph.selectionSearch",
+        "key": "alt+q",
+        "mac": "option+q"
+      },
+      {
+        "command": "sourcegraph.selectionSearchWeb",
+        "key": "alt+s",
+        "mac": "option+s"
       }
     ],
     "menus": {
@@ -176,12 +183,12 @@
           "group": "sourcegraph"
         },
         {
-          "command": "sourcegraph.searchOnSourcegraph",
+          "command": "sourcegraph.selectionSearch",
           "group": "sourcegraph",
           "when": "editorHasSelection"
         },
         {
-          "command": "sourcegraph.searchInSourcegraph",
+          "command": "sourcegraph.selectionSearchWeb",
           "group": "sourcegraph",
           "when": "editorHasSelection"
         }
