--- a/package.json
+++ b/package.json
@@ -371,6 +371,7 @@
     "date-fns": "^2.16.1",
     "delay": "^4.4.1",
     "downshift": "^3.4.8",
+    "eventsource": "^1.1.0",
     "focus-visible": "^5.2.0",
     "fzy.js": "^0.4.1",
     "got": "^11.5.2",
