--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,20 +8,21 @@
   <depends>com.intellij.modules.lang</depends>
 
   <extensions defaultExtensionNs="com.intellij">
-    <projectService serviceInterface="Config" serviceImplementation="Config"/>
+    <projectService serviceImplementation="Config"/>
+    <notificationGroup id="Sourcegraph" displayType="BALLOON"/>
   </extensions>
 
   <actions>
-    <action id="sourcegraph.open" class="Open" text="Open file" description="Open selection in Sourcegraph">
+    <action id="sourcegraph.open" class="Open" text="Open File" description="Open selection in Sourcegraph">
       <keyboard-shortcut first-keystroke="alt A" keymap="$default"/>
     </action>
-    <action id="sourcegraph.search" class="Search" text="Search selection" description="Search selection on Sourcegraph">
+    <action id="sourcegraph.search" class="Search" text="Search Selection" description="Search selection on Sourcegraph">
       <keyboard-shortcut first-keystroke="alt s" keymap="$default"/>
     </action>
-    <action id="sourcegraph.searchRepository" class="SearchRepository" text="Search in repository" description="Search selection in repository on Sourcegraph">
+    <action id="sourcegraph.searchRepository" class="SearchRepository" text="Search in Repository" description="Search selection in repository on Sourcegraph">
       <keyboard-shortcut first-keystroke="alt r" keymap="$default"/>
     </action>
-    <action id="sourcegraph.copy" class="Copy" text="Copy link to file" description="Copy link to Sourcegraph">
+    <action id="sourcegraph.copy" class="Copy" text="Copy Link to File" description="Copy link to Sourcegraph">
       <keyboard-shortcut first-keystroke="alt c" keymap="$default"/>
     </action>
     <group id="SourcegraphEditor" icon="/icons/icon.png" popup="true" text="Sourcegraph">
