--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "prettier": "prettier '**/{*.{js?(on),ts?(x),graphql,md,scss},.*.js?(on)}' --write --list-different --config prettier.config.js",
-    "prettier-check": "yarn -s run prettier --write=false --check --list-different=false --loglevel=warn",
-    "all:eslint": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run eslint --quiet",
-    "all:stylelint": "yarn --cwd client/web run stylelint && yarn --cwd client/shared run stylelint && yarn --cwd client/branded run stylelint && yarn --cwd client/browser run stylelint && yarn --cwd client/wildcard run stylelint",
+    "format": "prettier '**/{*.{js?(on),ts?(x),graphql,md,scss},.*.js?(on)}' --write --list-different --config prettier.config.js",
+    "format:check": "yarn -s run prettier --write=false --check --list-different=false --loglevel=warn",
+    "lint:js": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" NODE_OPTIONS=\"--max_old_space_size=16192\" eslint",
+    "lint:js:changed": "yarn lint:js $(git diff --diff-filter=d --name-only main | grep -E '.[tj]sx?$' | xargs)",
+    "lint:js:all": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run lint:js --quiet",
+    "lint:css": "stylelint",
+    "lint:css:changed": "yarn lint:css $(git diff --diff-filter=d --name-only main | grep -E '.s?css$' | xargs)",
+    "lint:css:all": "yarn --cwd client/web run lint:css && yarn --cwd client/shared run lint:css && yarn --cwd client/branded run lint:css && yarn --cwd client/browser run lint:css && yarn --cwd client/wildcard run lint:css",
+    "lint:graphql": "graphql-schema-linter",
     "build-ts": "tsc -b tsconfig.all.json",
-    "graphql-lint": "graphql-schema-linter",
     "build-web": "yarn workspace @sourcegraph/web run build",
     "watch-web": "yarn workspace @sourcegraph/web run watch",
     "generate": "gulp generate",
