--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier '**/{*.{js?(on),ts?(x),graphql,md,scss},.*.js?(on)}' --write --list-different --config prettier.config.js",
     "prettier-check": "yarn -s run prettier --write=false --check --list-different=false --loglevel=warn",
     "all:eslint": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run eslint --quiet",
-    "all:stylelint": "yarn --cwd client/web run stylelint && yarn --cwd client/shared run stylelint && yarn --cwd client/branded run stylelint && yarn workspace @sourcegraph/browser run stylelint && yarn --cwd client/wildcard run stylelint",
+    "all:stylelint": "yarn --cwd client/web run stylelint && yarn --cwd client/shared run stylelint && yarn --cwd client/branded run stylelint && yarn --cwd client/browser run stylelint && yarn --cwd client/wildcard run stylelint",
     "build-ts": "tsc -b tsconfig.all.json",
     "graphql-lint": "graphql-schema-linter",
     "build-web": "yarn workspace @sourcegraph/web run build",
