web: run stylelint for all packages

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "scripts": {
     "format": "prettier '**/{*.{js?(on),ts?(x),graphql,md,scss},.*.js?(on)}' --write --list-different --config prettier.config.js",
     "format:check": "yarn -s run prettier --write=false --check --list-different=false --loglevel=warn",
-    "lint:js": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" NODE_OPTIONS=\"--max_old_space_size=16192\" eslint",
-    "lint:js:changed": "yarn lint:js $(git diff --diff-filter=d --name-only main | grep -E '.[tj]sx?$' | xargs)",
-    "lint:js:all": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run lint:js --quiet",
-    "lint:css": "stylelint",
-    "lint:css:changed": "yarn lint:css $(git diff --diff-filter=d --name-only main | grep -E '.s?css$' | xargs)",
-    "lint:css:all": "yarn --cwd client/web run lint:css && yarn --cwd client/shared run lint:css && yarn --cwd client/branded run lint:css && yarn --cwd client/browser run lint:css && yarn --cwd client/wildcard run lint:css",
+    "_lint:js": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" NODE_OPTIONS=\"--max_old_space_size=16192\" eslint",
+    "lint:js:changed": "yarn _lint:js $(git diff --diff-filter=d --name-only main | grep -E '.[tj]sx?$' | xargs)",
+    "lint:js:all": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run _lint:js --quiet",
+    "_lint:css": "stylelint",
+    "lint:css:changed": "yarn _lint:css $(git diff --diff-filter=d --name-only main | grep -E '.s?css$' | xargs)",
+    "lint:css:all": "yarn _lint:css 'client/*/src/**/*.scss'",
     "lint:graphql": "graphql-schema-linter",
     "build-ts": "tsc -b tsconfig.all.json",
     "build-web": "yarn workspace @sourcegraph/web run build",
