--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "generate": "gulp generate",
     "watch-generate": "gulp watchGenerate",
     "test": "jest --testPathIgnorePatterns end-to-end regression integration storybook /out/.*test.js",
-    "test-integration:base": "TS_NODE_PROJECT=client/web/src/integration/tsconfig.json mocha --parallel=$CI --retries=1 --jobs=2",
-    "test-integration": "yarn test-integration:base \"./client/web/src/integration/**/*.test.ts\"",
+    "_test-integration": "TS_NODE_PROJECT=client/web/src/integration/tsconfig.json mocha --parallel=$CI --retries=1 --jobs=2",
+    "test-integration": "yarn _test-integration \"./client/web/src/integration/**/*.test.ts\"",
     "test-browser-integration": "yarn --cwd client/browser run test-integration",
-    "cover-integration:base": "nyc --hook-require=false yarn test-integration:base",
+    "_cover-integration": "nyc --hook-require=false yarn _test-integration",
     "cover-integration": "nyc --hook-require=false yarn test-integration",
     "cover-browser-integration": "nyc --hook-require=false yarn --cwd client/browser test-integration",
     "test-lighthouse": "SOURCEGRAPH_API_URL=https://sourcegraph.com lhci collect && lhci open",
