--- a/client/vscode/package.json
+++ b/client/vscode/package.json
@@ -62,6 +62,12 @@
         "category": "Sourcegraph",
         "title": "Remove Repository from Sourcegraph File System",
         "icon": "$(trash)"
+      },
+      {
+        "command": "sourcegraph.openLocalCopy",
+        "category": "Sourcegraph",
+        "title": "Open Remote File Locally",
+        "icon": "$(folder-opened)"
       }
     ],
     "viewsContainers": {
@@ -150,6 +156,12 @@
             }
           ],
           "description": "Each value pair will be added to the request headers made to your instance."
+        },
+        "sourcegraph.basePath": {
+          "description": "The file path on the machine to the folder that is expected to contain all repositories.",
+          "type": "string",
+          "default": "/Documents/",
+          "examples": ["/Users/USERNAME/Documents/"]
         }
       }
     },
@@ -188,6 +200,11 @@
         {
           "command": "sourcegraph.search",
           "group": "sourcegraph"
+        },
+        {
+          "command": "sourcegraph.openLocalCopy",
+          "when": "resourceScheme == sourcegraph && editorReadonly",
+          "group": "sourcegraph"
         }
       ],
       "view/title": [
@@ -200,6 +217,11 @@
       "editor/title": [
         {
           "command": "sourcegraph.openInBrowser",
+          "when": "resourceScheme == sourcegraph && editorReadonly",
+          "group": "navigation"
+        },
+        {
+          "command": "sourcegraph.openLocalCopy",
           "when": "resourceScheme == sourcegraph && editorReadonly",
           "group": "navigation"
         }
