chore: preprare github action

--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -4,8 +4,18 @@ on:
   pull_request:
     types: [opened, synchronize, closed]
 
+  schedule:
+    # At minute 0 past every 12th hour
+    - cron: '0 */12 * * *'
+
+  # For testing
+  push:
+    branches:
+      - contractors/SG-33486
+
 jobs:
-  preview-deployment:
+  remove-pr-preview-app:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +30,22 @@ jobs:
         env:
           RENDER_COM_API_KEY: ${{ secrets.RENDER_COM_API_KEY }}
           RENDER_COM_OWNER_ID: ${{ secrets.RENDER_COM_OWNER_ID }}
-
           BUILDKITE_PULL_REQUEST_REPO: "https://github.com/${{ github.repository }}"
           BUILDKITE_BRANCH: ${{ github.head_ref }}
+
+  clean-up-inactive-pr-preview-apps:
+    if: github.event_name == 'schedule' || github.event_name == 'push'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Clean up inactive PR preview apps
+        # Clean up
+        run: ./dev/ci/render-pr-preview-cleanup.sh -e 5
+        env:
+          RENDER_COM_API_KEY: ${{ secrets.RENDER_COM_API_KEY }}
+          RENDER_COM_OWNER_ID: ${{ secrets.RENDER_COM_OWNER_ID }}
